FIX: Overlapping Footer

--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,6 +1,6 @@
 .home {
   padding: 10vh 2vh;
-  height: 100vh;
+  min-height: 100vh;
   h1 {
     font-weight: bold;
   }
